@@ -195,105 +195,3 @@ TEST(MemoryCache, Basic)
 
   ASSERT_EQ("45 42 43 47 44 42 ", provider.log_);
 }
-
-
-#include "../OrthancServer/ServerEnumerations.h"
-
-namespace
-{
-  struct Payload
-  {
-    Orthanc::ResourceType type_;
-    boost::posix_time::ptime time_;
-
-    Payload() : type_(Orthanc::ResourceType_Instance)
-    {
-    }
-
-    Payload(Orthanc::ResourceType type) : type_(type)
-    {
-      time_ = boost::posix_time::second_clock::local_time();
-    }
-
-    unsigned int GetAge() const
-    {
-      return (boost::posix_time::second_clock::local_time() - time_).total_seconds();
-    }
-  };
-
-
-  class StableResourcesMonitor
-  {
-  private:
-    bool done_;
-    boost::mutex mutex_;
-    unsigned int stableTimeout_;
-    Orthanc::LeastRecentlyUsedIndex<std::string, Payload>  unstableResources_;
-    boost::thread thread_;
-
-    static void Thread(StableResourcesMonitor* that)
-    {
-      static const unsigned int SLEEP = 1;  // Check for stable resources each second
-
-      while (!that->done_)
-      {
-        boost::this_thread::sleep(boost::posix_time::seconds(SLEEP));
-
-        boost::mutex::scoped_lock lock(that->mutex_);
-        while (!that->unstableResources_.IsEmpty() &&
-               that->unstableResources_.GetOldestPayload().GetAge() > that->stableTimeout_)
-        {
-          // This DICOM resource has not received any new instance for
-          // some time. It can be considered as stable.
-          
-          Payload payload;
-          std::string id = that->unstableResources_.RemoveOldest(payload);
-
-          LOG(INFO) << "Stable resource: " << id << " (type " << payload.type_ << ")";
-        }
-      }
-
-      LOG(INFO) << "Closing the monitor for stable resources";
-    }
-
-  public:
-    StableResourcesMonitor(unsigned int stableTimeout)
-    {
-      done_ = false;
-      stableTimeout_ = stableTimeout;
-      thread_ = boost::thread(Thread, this);
-    }
-
-    ~StableResourcesMonitor()
-    {
-      done_ = true;
-
-      if (thread_.joinable())
-      {
-        thread_.join();
-      }
-    }
-
-    void ResourceUpdated(const std::string& id,
-                         Orthanc::ResourceType type)
-    {
-      assert(type == Orthanc::ResourceType_Patient ||
-             type == Orthanc::ResourceType_Study ||
-             type == Orthanc::ResourceType_Series);
-
-      boost::mutex::scoped_lock lock(mutex_);
-      unstableResources_.AddOrMakeMostRecent(id, type);
-    }
-  };
-}
-
-TEST(LRU, Hello)
-{
-  StableResourcesMonitor m(5);
-  boost::this_thread::sleep(boost::posix_time::seconds(1));
-  m.ResourceUpdated("Hello", Orthanc::ResourceType_Study);
-  m.ResourceUpdated("World", Orthanc::ResourceType_Series);
-  boost::this_thread::sleep(boost::posix_time::seconds(2));
-  m.ResourceUpdated("Hello", Orthanc::ResourceType_Study);
-  boost::this_thread::sleep(boost::posix_time::seconds(10));
-}
